hphp/hack/test/enum_supertyping/typing/includes-not-enum.bad.php.exp
File "includes-not-enum.bad.php", line 10, characters 6-6:
Enum A includes C which is not an enum (Typing[4388])
