hphp/hack/test/enum_supertyping/typing/includes-not-enum.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

<<file:__EnableUnstableFeatures(
  'enum_supertyping',
)>>

class C {}

enum A : int includes C {}
